<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARE</string>

    <string name="are_editor_desc_bold">Bold</string>
    <string name="are_editor_desc_italic">Italic</string>
    <string name="are_editor_desc_underline">Underline</string>
    <string name="are_editor_desc_strikethrough">Strikethrough</string>
    <string name="are_editor_desc_font_size">Font size</string>
    <string name="are_editor_desc_font_color">Text color</string>
    <string name="are_editor_desc_background_color">Highlight color</string>
    <string name="are_editor_desc_font_face">Font style</string>
    <string name="are_editor_desc_align_left">Align left</string>
    <string name="are_editor_desc_align_center">Align center</string>
    <string name="are_editor_desc_align_right">Align right</string>
    <string name="are_editor_desc_list_bullet">Bulleted list</string>
    <string name="are_editor_desc_list_number">Numbered list</string>
    <string name="are_editor_desc_indent_increase">Increase indent</string>
    <string name="are_editor_desc_indent_decrease">Decrease indent</string>
    <string name="are_editor_desc_insert_image">Insert image</string>
    <string name="are_editor_desc_insert_video">Insert video</string>
    <string name="are_editor_desc_insert_link">Insert link</string>
    <string name="are_editor_desc_mention">Mention someone</string>
    <string name="are_editor_desc_quote">Blockquote</string>
    <string name="are_editor_desc_horizontal_rule">Horizontal line</string>
    <string name="are_editor_desc_subscript">Subscript</string>
    <string name="are_editor_desc_superscript">Superscript</string>
    <string name="are_editor_desc_clear_format">Clear formatting</string>
    <string name="are_editor_desc_show_source">Toggle HTML source</string>
    <string name="are_editor_desc_toggle_toolbar">Move toolbar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="are_dialog_link_title">Insert Link</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_are__video_player">ARE Video</string>
    <string name="btn_attach_video">Attach Video</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_default_image_preview">ARE Are_ImagePreviewActivity</string>
    <string name="save_to_local">Save to local</string>
</resources>
